fix menu shadow bleed bug

--- a/public/sass/_material-nav.scss
+++ b/public/sass/_material-nav.scss
@@ -31,7 +31,7 @@
 }
 
 .md-nav {
-  $width: 280px;
+  $width: 380px;
 
   position: fixed;
   top: 0;
